apps/base/projects/waypoint/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: waypoint-external
  annotations:
    # group: external inherited from the envoy-external gateway
    gatus.home-operations.com/enabled: "true"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - travel.j6n.dev
  rules:
  - backendRefs:
    - name: waypoint
      port: 8080
